--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait" />
+        <activity android:name=".RegisterActivity" android:screenOrientation="portrait" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".DisplayActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,11 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".newPost" />
-        <activity android:name=".DisplayPost" />
-        <activity android:name=".ReSendVerificationLink" />
-        <activity android:name=".ForgotPassword" />
-        <activity android:name=".About"></activity>
+        <activity android:name=".newPost" android:screenOrientation="portrait" />
+        <activity android:name=".DisplayPost" android:screenOrientation="portrait" />
+        <activity android:name=".ReSendVerificationLink" android:screenOrientation="portrait"/>
+        <activity android:name=".ForgotPassword" android:screenOrientation="portrait"/>
+        <activity android:name=".About" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
