--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity" android:screenOrientation="portrait" />
-        <activity android:name=".RegisterActivity" android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".DisplayActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +27,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".newPost" android:screenOrientation="portrait" />
-        <activity android:name=".DisplayPost" android:screenOrientation="portrait" />
-        <activity android:name=".ReSendVerificationLink" android:screenOrientation="portrait"/>
-        <activity android:name=".ForgotPassword" android:screenOrientation="portrait"/>
-        <activity android:name=".About" android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".newPost"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".DisplayPost"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ReSendVerificationLink"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ForgotPassword"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".About"
+            android:screenOrientation="portrait" />
+        <activity android:name=".FeedBack" android:label="FeedBack"></activity>
     </application>
 
 </manifest>
